2005-12-xx:  0.2.6       -- option to hide splashscreen added
                         -- progress is now displayed in statusbar
			 -- Changes in the menu: "Settings" menu created to
			    resemble KDE menus layout.

2005-11-13:  0.2.5       -- splash screen added (made exclusively for
                            QComicBook by Adam Mateja)
                         -- icons for Open Archive/Directory, Settings and
                            Set Bookmark options added
			 -- fixed bug with caching not working

2005-08-03:  0.2.4       -- new option for setting external help browser added
                         -- fixed redrawing bugs
                         -- internal cleanups and small improvements
			 -- help updated
			 -- check for correct Qt version in autoconf added

2005-07-09:  0.2.3       -- page is scrolled to top-right corner in japanese mode
                         -- autoconf script updated with newest version of bnv_have_qt
                            macro
                         
2005-06-19:  0.2.2       -- added image rotating options

2005-05-15:  0.2.1       -- rar, zip, ace archives are recognized by magic
                            bytes first, not by extension
                         -- fixed bug with handling relative comicbook paths
                            from commandline
                         -- fixed bug with progress window reappearing

2005-05-09:  0.2.0       -- 'Manage bookmarks' option added
                         -- many internal improvements and small bugfixes
                         -- Open next/previous actions are enabled only for
                            archives from now

2005-05-04:  0.1.9       -- option to hide statusbar in fullscreen mode added
                         -- keyboard shortcuts for 'Open next' and 'Open
                            previous' added
                         -- changing mouse cursor takes effect immediately now -
                            no need to restart