@@ -1,4 +1,4 @@
 SUBDIRS = src icons help
-EXTRA_DIST = THANKS Doxyfile icons debian fedora help
+EXTRA_DIST = THANKS icons debian fedora help
 dist-hook:
 	rm -rf `find $(distdir)/ -name .svn`
