@@ -6,6 +6,7 @@
 		    <li><a href="menu.html#view">View menu</a>
 		    <li><a href="menu.html#navigation">Navigation menu</a>
 		    <li><a href="menu.html#bookmarks">Bookmarks menu</a>
+		    <li><a href="menu.html#settings">Settings menu</a>
 	    </ul>
 	    <li><a href="keyboard.html">Keyboard reference</a>
 	    <li><a href="internals.html">Internals</a>
